--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,185 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/paintbackground"
     tools:context="edu.orangecoastcollege.cs273.bwegener.paintestimator.MainActivity">
 
+
     <TextView
+        android:id="@+id/appName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="23dp"
+        android:text="@string/app_name" />
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/roomDimensions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/appName"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="14dp"
+        android:text="@string/enter_dimensions" />
+
+    <TextView
+        android:id="@+id/length"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/roomDimensions"
+        android:layout_alignStart="@+id/roomDimensions"
+        android:layout_below="@+id/roomDimensions"
+        android:layout_marginTop="34dp"
+        android:text="@string/length" />
+
+    <TextView
+        android:id="@+id/width"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/length"
+        android:layout_alignStart="@+id/length"
+        android:layout_below="@+id/length"
+        android:layout_marginTop="24dp"
+        android:text="@string/width" />
+
+    <TextView
+        android:id="@+id/height"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/width"
+        android:layout_alignStart="@+id/width"
+        android:layout_below="@+id/width"
+        android:layout_marginTop="27dp"
+        android:text="@string/height" />
+
+    <EditText
+        android:id="@+id/lengthEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/length"
+        android:layout_alignLeft="@+id/appName"
+        android:layout_alignStart="@+id/appName"
+        android:layout_marginLeft="49dp"
+        android:layout_marginStart="49dp"
+        android:ems="10"
+        android:inputType="number"
+        android:layout_alignRight="@+id/roomDimensions"
+        android:layout_alignEnd="@+id/roomDimensions"
+        android:layout_alignTop="@+id/length" />
+
+    <EditText
+        android:id="@+id/widthEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/lengthEditText"
+        android:layout_alignStart="@+id/lengthEditText"
+        android:ems="10"
+        android:inputType="number"
+        android:layout_alignRight="@+id/lengthEditText"
+        android:layout_alignEnd="@+id/lengthEditText"
+        android:layout_alignTop="@+id/width"
+        android:layout_above="@+id/height" />
+
+    <EditText
+        android:id="@+id/heightEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/widthEditText"
+        android:layout_alignStart="@+id/widthEditText"
+        android:ems="10"
+        android:inputType="number"
+        android:layout_alignRight="@+id/widthEditText"
+        android:layout_alignEnd="@+id/widthEditText"
+        android:layout_alignTop="@+id/height"
+        android:layout_alignBottom="@+id/height" />
+
+    <TextView
+        android:id="@+id/doorsWindows"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/heightEditText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="159dp"
+        android:text="@string/enter_door_window" />
+
+    <TextView
+        android:id="@+id/doors"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/height"
+        android:layout_alignStart="@+id/height"
+        android:layout_below="@+id/doorsWindows"
+        android:layout_marginTop="32dp"
+        android:text="@string/doors" />
+
+    <TextView
+        android:id="@+id/windows"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/doors"
+        android:layout_alignStart="@+id/doors"
+        android:layout_below="@+id/doors"
+        android:layout_marginTop="28dp"
+        android:text="@string/windows" />
+
+    <EditText
+        android:id="@+id/doorsEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/windows"
+        android:layout_alignLeft="@+id/heightEditText"
+        android:layout_alignStart="@+id/heightEditText"
+        android:ems="10"
+        android:inputType="number"
+        android:layout_alignTop="@+id/doors"
+        android:layout_alignRight="@+id/doorsWindows"
+        android:layout_alignEnd="@+id/doorsWindows" />
+
+    <EditText
+        android:id="@+id/windowsEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/doorsEditText"
+        android:layout_alignStart="@+id/doorsEditText"
+        android:ems="10"
+        android:inputType="number"
+        android:layout_alignTop="@+id/windows"
+        android:layout_alignRight="@+id/doorsEditText"
+        android:layout_alignEnd="@+id/doorsEditText"
+        android:layout_alignBottom="@+id/windows" />
+
+    <Button
+        android:id="@+id/computeGallonsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/windows"
+        android:layout_alignStart="@+id/windows"
+        android:layout_below="@+id/windows"
+        android:layout_marginTop="37dp"
+        android:text="@string/compute_button_text" />
+
+    <Button
+        android:id="@+id/helpButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/help_button_text"
+        android:layout_alignBaseline="@+id/computeGallonsButton"
+        android:layout_alignBottom="@+id/computeGallonsButton"
+        android:layout_alignRight="@+id/heightEditText"
+        android:layout_alignEnd="@+id/heightEditText" />
+
+    <TextView
+        android:id="@+id/gallons"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/computeGallonsButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="121dp"
+        android:text="@string/gallons" />
+
+
+</RelativeLayout>
