--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -9,38 +9,39 @@
 
     <TextView
         android:id="@+id/paintRequired"
-        android:layout_width="wrap_content"
+        android:layout_width="600dp"
         android:layout_height="wrap_content"
+        android:textAlignment="center"
         android:text="@string/paint_required"
+        android:textSize="30sp"
         tools:layout_editor_absoluteX="339dp"
         tools:layout_editor_absoluteY="16dp"
+        android:layout_marginRight="62dp"
+        android:layout_marginEnd="62dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="282dp"
-        android:layout_marginStart="282dp" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
 
     <Button
         android:id="@+id/roomDimensionsButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="33dp"
+        android:textSize="20sp"
+        android:layout_marginTop="34dp"
         android:text="@string/room_button_text"
         android:onClick="goToMain"
-        android:layout_marginLeft="265dp"
-        android:layout_marginStart="265dp"
         android:layout_below="@+id/paintRequired"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true"/>
 
     <TextView
         android:id="@+id/notes"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_width="450dp"
+        android:layout_height="600dp"
+        android:textSize="20sp"
+        android:textAlignment="center"
         android:text="@string/help_text"
-        android:layout_marginTop="108dp"
+        android:layout_marginTop="53dp"
         android:layout_below="@+id/roomDimensionsButton"
-        android:layout_alignRight="@+id/paintRequired"
-        android:layout_alignEnd="@+id/paintRequired" />
+        android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
