--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -16,17 +16,14 @@
         android:textSize="30sp"
         tools:layout_editor_absoluteX="339dp"
         tools:layout_editor_absoluteY="16dp"
-        android:layout_marginRight="62dp"
-        android:layout_marginEnd="62dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
+        android:layout_centerHorizontal="true"/>
 
     <Button
         android:id="@+id/roomDimensionsButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:textSize="22sp"
         android:layout_marginTop="34dp"
         android:text="@string/room_button_text"
         android:onClick="goToMain"
@@ -38,7 +35,6 @@
         android:layout_width="450dp"
         android:layout_height="600dp"
         android:textSize="20sp"
-        android:textAlignment="center"
         android:text="@string/help_text"
         android:layout_marginTop="53dp"
         android:layout_below="@+id/roomDimensionsButton"
