--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,7 +73,7 @@
         android:layout_marginLeft="49dp"
         android:layout_marginStart="49dp"
         android:ems="10"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:textAlignment="center"
         android:textSize="18sp"/>
 
@@ -88,7 +88,7 @@
         android:layout_alignStart="@+id/lengthEditText"
         android:layout_below="@+id/lengthEditText"
         android:ems="10"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:textAlignment="center"
         android:textSize="18sp"/>
 
@@ -103,7 +103,7 @@
         android:layout_alignStart="@+id/widthEditText"
         android:layout_below="@+id/widthEditText"
         android:ems="10"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:textAlignment="center"
         android:textSize="18sp"/>
 
@@ -203,6 +203,8 @@
         android:text="@string/gallons_needed"
         android:textAlignment="center"
         android:textSize="15sp"/>
+
+
 
 
 </RelativeLayout>
